--- a/skin/frontend/default/rooja/css/login.css
+++ b/skin/frontend/default/rooja/css/login.css
@@ -206,9 +206,6 @@ strong{font-weight:bold;}
 /*.input-box {margin: 5px 0;}*/
 .register .checkbox {float: left;width: 20px;margin: 0 10px 0;}
 
-
-
-
 .fields .field {
 	display: inline-block;
 	*display: inline;
@@ -220,9 +217,6 @@ strong{font-weight:bold;}
 .customer-name .field:first-child {
 	margin-right: 8px;
 }
-
-
-
 
 .defaultvalue_label {
 	color: rgba(46,26,51,0.75) !important;
@@ -246,7 +240,7 @@ strong{font-weight:bold;}
     cursor:auto;
 }
 #MyBetaList form input{
-    background:url(../_images/join-now-btn.png) no-repeat top left;
+    background:url(../images/splash/join-now-btn.png) no-repeat top left;
     width:109px;height:40px;
     margin:0 0 0px 271px;
     outline:none;border:none;
@@ -255,7 +249,7 @@ strong{font-weight:bold;}
     cursor:pointer;
 }
 #tellMeMore{
-    background-image:url(../_images/tell-me-more-btn.png);
+    background-image:url(../images/splash/tell-me-more-btn.png);
     width:380px;height:41px;
 }
 
@@ -269,6 +263,3 @@ strong{font-weight:bold;}
 #MyBetaList a#MyBetaList-referrer-link:link, #MyBetaList a#MyBetaList-referrer-link:visited{color:#24112a !important;}
 .twitter-share-button, .twitter-count-none{margin-top:-1px;}
 .alignRight{text-align:right;border-bottom:5px solid #3b2243;margin-bottom:20px;padding-bottom:20px;}
-
-
-
