--- a/app/design/frontend/base/default/template/email/productalert/items.phtml
+++ b/app/design/frontend/base/default/template/email/productalert/items.phtml
@@ -44,7 +44,7 @@
     <?php $_giftMessage = $this->helper('giftmessage/message')->getGiftMessage($_order->getGiftMessageId()); ?>
     <?php if ($_giftMessage): ?>
 <br />
-<table cellspacing="0" cellpadding="0" border="0" width="100%">
+<table cellspacing="0" cellpadding="0" border="0" width="582px">
     <thead>
         <tr>
             <th align="left"><strong><?php echo $this->__('Gift Message for this Order') ?></strong></th>
