--- a/app/locale/en_US/template/email/sales/order_new.html
+++ b/app/locale/en_US/template/email/sales/order_new.html
@@ -57,7 +57,7 @@
 						{{var order.getCreatedAtFormated('short')}
 					</td>
 					<td class="subhead-sect" style="margin: 0;padding: 5px 10px;border: 0;border-spacing: 0px;border-collapse: collapse;width: 33%;">
-						{{var order.shipping_address.format('html')}
+						{{var order.shipping_address.format('html')}}
 					</td>
 				</tr>
 			</table>
