modifying login page

--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -74,3 +74,14 @@
     </div>
 </div>
 <?php endif;?>
+<script type="text/javascript">
+	jQuery(document).ready(function(){
+		jQuery("#myBag").click(function() {
+			jQuery("#sidebarCart").slideDown();
+			return false;
+			});
+			
+	 });
+			
+</script>
+
