--- a/app/design/frontend/default/rooja/template/rewardsref/customer/referral.phtml
+++ b/app/design/frontend/default/rooja/template/rewardsref/customer/referral.phtml
@@ -6,7 +6,12 @@
 <?php $_referred = $this->getReferred();?>
 
 <br/>
-<h1>You have <?php echo count($_referred);?> referral.</h1>
+<?php 
+	$referrerCount = count($_referred);
+	$referrerPercent = $referrerCount * 10;
+?>
+
+<span id="referralBar"><span id="numReferrals" style="width=<?php echo $referrerPercent; ?>%"></span></span>
 
 <div class="half-col right"><?php echo $this->getChildHtml('affiliate'); ?></div>
 <?php echo $this->getChildHtml('refer_form'); ?>
