referral bar in prog

--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -273,6 +273,8 @@ ul#myAccount li ul li a:hover{
     background:#7ca600;
 }
 
+#howClose{font-size:1.4em;color:#d68533;}
+
 
 /*************** CONTACT FORM */
 #contact-text, #contact-form {
