--- a/app/design/frontend/default/rooja/template/rewardsref/customer/referral.phtml
+++ b/app/design/frontend/default/rooja/template/rewardsref/customer/referral.phtml
@@ -1,17 +1,12 @@
+<div class="right" id="help">
+	<a href="#" class="needAssistance fr" title="Need Assitance? Talk to a live rep"><img src="<?php echo $this->getSkinUrl('images/icons/question-mark.png'); ?>" alt="Question mark icon"> Need Assistance</a>
+	</div>
+
 <div class="referrals">
     
         <h1>Invite a Friend</h1>
 
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
-<?php $_referred = $this->getReferred();?>
-
-<br/>
-<?php 
-	$referrerCount = count($_referred);
-	$referrerPercent = $referrerCount * 10;
-?>
-
-<span id="referralBar"><span id="numReferrals" style="width=<?php echo $referrerPercent; ?>%"></span></span>
 
 <div class="half-col right"><?php echo $this->getChildHtml('affiliate'); ?></div>
 <?php echo $this->getChildHtml('refer_form'); ?>
