--- a/app/design/frontend/default/rooja/template/rewardsref/customer/referral/history.phtml
+++ b/app/design/frontend/default/rooja/template/rewardsref/customer/referral/history.phtml
@@ -2,7 +2,17 @@
     <?php $_referred = $this->getReferred();?>
    
 <?php if($this->showHistory()): ?>
-    <h3 class="page-invite-head"><?php echo $this->__("Referrals"); ?></h3>
+    <h3 class="page-invite-head fl">Track Your Progress</h3>
+
+	<br/>
+	<?php 
+		$referrerCount = count($_referred);
+		$referrerPercent = $referrerCount * 10;
+		$awayFrom10 = 10 - $referrerCount;
+	?>
+	<h3 class="fr" id="howClose"><?php echo $awayFrom10 ?> more friends until a special prize!</h3>
+	<span id="referralBar" class="clear"><span id="numReferrals" style="width=<?php echo $referrerPercent; ?>%"></span></span>
+	
     <?php if($_referred->getSize()): ?>
     <table cellspacing="0" class="data-table" id="referred-friends-table">
         <thead>
