referral bar in prog

--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -273,7 +273,7 @@ ul#myAccount li ul li a:hover{
     background:#7ca600;
 }
 
-#howClose{font-size:1.4em;color:#d68533;}
+#howClose{font-size:1.3em;color:#d68533;margin:5px 0 0;}
 
 
 /*************** CONTACT FORM */
