referral bar in prog

--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -34,7 +34,7 @@
 <?php if ($this->getIsNeedToDisplaySideBar()):?>
 <div class="block block-cart" id="sidebarCart">
     <?php $_cartQty = $this->getSummaryCount() ?>
-	<div class="hiw-container">
+	<div class="hiw-container" id="topCart">
 		<div class="howitworks">
 			<p class="hiw-header">How it works</p>
     <div class="block-content">
