--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -361,7 +361,7 @@ td .product-name { width: 130px;}
 
 
 /* HOW IT WORKS OVERLAY */
-.hiw-container {background: url(../images/bgs/gray-diag.png) repeat; height:260px; width:100%; padding: 30px 0;}
+.hiw-container {background: url(../images/bgs/gray-diag.png) repeat; height:260px; width:100%; padding: 30px 0 0;}
 .howitworks {width:980px; color: #fff; margin: 0 auto; overflow: hidden;}
 .howitworks img {float:left; display: block; padding: 4px 14px 20px 5px;}
 	.hiw1-2 {float:left; width: 66%;}
@@ -382,12 +382,10 @@ p.hiw-header {
 	
 .closer {
 	width:100%; 
-	overflow: hidden;
-height:32px;
 	}	
 a.closer {	
 	font-family: "ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif; 
-	background: black url("../images/icons/arrow-nav-white.png") no-repeat 60px 11px;
+	background: black url("../images/icons/arrow-nav-white.png") no-repeat 85px 11px;
 	font-size:18px; 
 	padding: 5px 29px 5px 10px;
 	color: #fff;
