referral bar in prog

--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -36,7 +36,7 @@
     <?php $_cartQty = $this->getSummaryCount() ?>
 	<div class="hiw-container" id="topCart">
 		<div class="howitworks">
-			<p class="hiw-header">How it works</p>
+			<p class="hiw-header">My Bag</p>
     <div class="block-content">
     <?php if ($_cartQty>0): ?>
         <div class="summary">
