--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -279,7 +279,7 @@ ul#myAccount li ul li a:hover{
 #topCart{height:auto;}
 #topCart .mini-products-list .product-image{width:60px;border:none;}
 
-#topCart .block li.even{background:transparent;}
+#cart-sidebar li.even{background:none;}
 
 #topCart .product-name{font-size:1.5em;font-family: "ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;color:#fff;}
 
