--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -282,7 +282,7 @@ ul#myAccount li ul li a:hover{
 #cart-sidebar li.even{background:none;}
 
 #topCart .product-name{font-size:1.5em;font-family: "ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;color:#fff;}
-
+#topCart .product-name a{color:#fff;}
 
 /*************** CONTACT FORM */
 #contact-text, #contact-form {
