--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -280,9 +280,11 @@ ul#myAccount li ul li a:hover{
 #topCart .mini-products-list .product-image{width:60px;border:none;}
 
 #cart-sidebar li.even{background:none;}
+#cart-sidebar li{border-top:1px solid #fff;}
 
 #topCart .product-name{font-size:1.5em;font-family: "ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;color:#fff;}
 #topCart .product-name a{color:#fff;}
+
 
 /*************** CONTACT FORM */
 #contact-text, #contact-form {
@@ -364,7 +366,7 @@ td .product-name { width: 130px;}
 
 
 /* HOW IT WORKS OVERLAY */
-.hiw-container {background: url(../images/bgs/gray-diag.png) repeat; height:260px; width:100%; padding: 30px 0 0;}
+.hiw-container {background: url(../images/bgs/gray-diag.png) repeat; height:260px; width:100%; padding: 20px 0 0;}
 .howitworks {width:980px; color: #fff; margin: 0 auto; overflow: hidden;}
 .howitworks img {float:left; display: block; padding: 4px 14px 20px 5px;}
 	.hiw1-2 {float:left; width: 66%;}
@@ -380,7 +382,6 @@ p.hiw-header {
 	font-family: "ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;
 	font-weight: normal;
 	text-transform:uppercase;
-	padding: 10px 0 20px;
 	}
 	
 .closer {
