--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -286,6 +286,7 @@ ul#myAccount li ul li a:hover{
 #topCart .product-name a{color:#fff;}
 
 #cart-sidebar img{padding:0;}
+#topCart .subtotal{text-align:right;}
 #checkoutBtn
 
 
