referral bar in prog

--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -287,7 +287,9 @@ ul#myAccount li ul li a:hover{
 
 #cart-sidebar img{padding:0;}
 #topCart .subtotal{text-align:right;}
-#checkoutBtn
+#checkoutBtn{
+    float:right; height:40px; background:#431f4c; padding:0 0 0 8px; font:normal 12px/40px Arial, Helvetica, sans-serif; text-align:center; white-space:nowrap; color:#fff;
+}
 
 
 /*************** CONTACT FORM */
