referral bar in prog

--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -64,7 +64,7 @@
             <br />(<?php echo Mage::helper('checkout')->formatPrice($_subtotalInclTax) ?> <?php echo Mage::helper('tax')->getIncExcText(true) ?>)
         <?php endif; ?>
     </p>
-<a href="/checkout/cart" id="checkoutBtn">Checkout</a>
+<a href="/checkout/cart" id="checkoutBtn">Proceed to Checkout</a>
 
     </div>
 
