--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -288,7 +288,7 @@ ul#myAccount li ul li a:hover{
 #cart-sidebar img{padding:0;}
 #topCart .subtotal{text-align:right;}
 #checkoutBtn{
-    float:right; height:46px; background:#cc6600; width:181px; font-size:1.3em; text-align:center; color:#fff;
+    float:right; height:46px;line-height:46px; background:#cc6600; width:181px; font-size:1.4em; text-align:center; color:#fff;
 }
 
 
