referral bar in prog

--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -65,7 +65,7 @@
         <?php endif; ?>
     </p>
 <a href="/checkout/cart" id="checkoutBtn">Proceed to Checkout</a>
-
+<div class="clear"></div>
     </div>
 
 </div>
