referral bar in prog

--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -373,7 +373,7 @@ td .product-name { width: 130px;}
 
 /* HOW IT WORKS OVERLAY */
 .hiw-container {background: url(../images/bgs/gray-diag.png) repeat; height:260px; width:100%; padding: 20px 0 0;}
-.howitworks {width:980px; color: #fff; margin: 0 auto; overflow: hidden;}
+.howitworks {width:980px; color: #fff; margin: 0 auto 30px; overflow: hidden;}
 .howitworks img {float:left; display: block; padding: 4px 14px 20px 5px;}
 	.hiw1-2 {float:left; width: 66%;}
 		.one {float:left; width: 46%; padding: 15px 10px;background:#a85705;}
