new account email

--- a/app/locale/en_US/template/email/account_new.html
+++ b/app/locale/en_US/template/email/account_new.html
@@ -37,7 +37,7 @@
 	<li style="list-style: square;">Proceed through checkout faster when making a purchase</li>
 	<li style="list-style: square;">Check the status of orders</li>
 	<li style="list-style: square;">View past orders</li>
-	<li style="list-style: square;">Make changes to your <a href="{{store url="customer/account/"}}"account information</a></li>
+	<li style="list-style: square;">Make changes to your <a href="{{store url="customer/account/"}}" style="color:#000; text-decoration:underline;">account information</a></li>
 	<li style="list-style: square;">Change your password</li>
 	<li style="list-style: square;">Store alternative addresses (for shipping to multiple family members and friends!)</li>
 		
