new account email

--- a/app/locale/en_US/template/email/account_new.html
+++ b/app/locale/en_US/template/email/account_new.html
@@ -24,13 +24,7 @@
 			<img src="{{skin url="images/email/new-account_03.jpg" _area='frontend'}}" width="336" height="375" alt="" style="display: block;padding: 10px 10px 10px 0;"></td>
 		<td style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
 		<img src="{{skin url="images/email/register.jpg" _area='frontend'}}" alt="Thanks for Registering!" style="display: block;padding: 10px 10px 10px 0;">
-		Use the following when prompted to log in
-
-			<p class="password" style="background: #e2e2e2;fontsize: 16px;line-height: 22px;padding: 10px 23px;margin: 10px;">
-				Email: Dru B <br>
-				Pass: pizzazz	
-			</p>
-
+		The hottest apparel and accessories	from leading international designers are now at your fingertips.
 
 		<img src="{{skin url="images/email/account.jpg" _area='frontend'}}" alt="Account Features" style="display: block;padding: 10px 10px 10px 0;">
 <ul style="list-style: square;">
@@ -40,6 +34,8 @@
 	<li style="list-style: square;">Make changes to your <a href="{{store url="customer/account/"}}" style="color:#000; text-decoration:underline;">account information</a></li>
 	<li style="list-style: square;">Change your password</li>
 	<li style="list-style: square;">Store alternative addresses (for shipping to multiple family members and friends!)</li>
+	
+	<a href="http://www.rooja.com"><img src="images/email/start.jpg" alt="start shopping!" /><a>
 		
 	</ul></td></tr>
 	<tr style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
