--- a/app/locale/en_US/template/email/rewardsref/referral_subscribe.html
+++ b/app/locale/en_US/template/email/rewardsref/referral_subscribe.html
@@ -28,7 +28,7 @@ body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;
 		<img src="{{skin url="images/email/percent.jpg" _area='frontend'}}" alt="Account Features" style="display: block;padding: 10px 10px 10px 0;">
 Get access to internationally renowned designers and brands at prices you won't believe. Accept your invitation and join us today!		
 
-<a href="<?php echo $this-&gt;getReferralUrl(); ?>"><img src="{{skin url="images/email/accept.jpg" _area='frontend'}}" alt="accept invite" style="display: block;padding: 10px 10px 10px 0;">
+<a href="<?php echo $this->;getReferralUrl(); ?>"><img src="{{skin url="images/email/accept.jpg" _area='frontend'}}" alt="accept invite" style="display: block;padding: 10px 10px 10px 0;">
 	</a></td></tr>
 	<tr style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
 		<td colspan="2" id="footer" style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 11px;color: #111;line-height: 18px;">
