--- a/app/design/frontend/default/rooja/template/catalog/product/view/addtocart.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view/addtocart.phtml
@@ -34,7 +34,7 @@
         <label for="qty"><?php echo $this->__('Quantity') ?></label>
         <?php endif; ?>
 				</section>
-				    <button class="tr" id="addToBagBtn" onclick=ÓproductAddToCartForm.submit()Ó><span><?php echo $this->__('Add to Cart') ?></span></button>
+				    <button class="tr" id="addToBagBtn" onclick="productAddToCartForm.submit()"><span><?php echo $this->__('Add to Cart') ?></span></button>
 				    <?php /* Magento needs this as a button not a link
 					<a href="" class="tr" id="addToBagBtn" onclick="productAddToCartForm.submit(this)"></a>
 					*/ ?>
