add to cart fixes

--- a/app/design/frontend/default/rooja/template/j2tajaxcheckout/ajax_wrapper.phtml
+++ b/app/design/frontend/default/rooja/template/j2tajaxcheckout/ajax_wrapper.phtml
@@ -43,7 +43,7 @@
     <p><?php echo $this->__('loading...');?></p>
 </div>
 
-<div style="display: none; width: <?php echo $confirm_arr[0];?>px; height: <?php echo $confirm_arr[1];?>px; position: fixed; top: 496px;" class="j2tajax-confirm" id="j2t_ajax_confirm">
+<div style="display: none; padding: 20px; width: <?php echo $confirm_arr[0];?>px; position: fixed; top: 496px;" class="j2tajax-confirm" id="j2t_ajax_confirm">
         &nbsp;
 </div>
 
