--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -34,7 +34,8 @@
 
 <?php
 function timeBetweenNowAndDeadline($deadline) {
-    $currentDate = date("U");
+    $deadline = strtotime($deadline);
+	$currentDate = date("U");
     $diff = $deadline-$currentDate;
     $seconds = 0;
     $hours   = 0;
@@ -104,7 +105,7 @@ foreach ($categories as $_category){
              <article class="homeSale size2 fl masonry">
                 <a href="<?php echo  $c->getURL() ?>" title="View sale details for: <?php echo $c->getName(); ?>" class="product-image"><img src="/media/catalog/category/<?php echo $c->getThumbnail(); ?>" alt="" width="236px" /></a>
                 <h2><?php echo $c->getName(); ?></h2>
-					<p><?php echo timeBetweenNowAndDeadline(strtotime($enddate); ?></p>
+					<p><?php echo timeBetweenNowAndDeadline($enddate); ?></p>
             </article>
 				<?php } $i++; }}}}}  }} ?>			
 
