--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -61,9 +61,9 @@ function timeBetweenNowAndDeadline($deadline) {
         else{$hours = $rest / 3600;}
     }
 
-    if($days > 0){$days = $days.'d, ';}
+    if($days > 0){$days = $days.' days and ';}
     else{$days = false;}
-    if($hours > 0){$hours = $hours.'h, ';}
+    if($hours > 0){$hours = $hours.'hours ';}
     else{$hours = false;}
     if($minutes > 0){$minutes = $minutes.'m, ';}
     else{$minutes = false;}
@@ -98,14 +98,14 @@ foreach ($categories as $_category){
 				                <a href="<?php echo  $c->getURL() ?>" title="View sale details for: <?php echo $c->getName(); ?>" class="product-image"><img src="/media/catalog/category/<?php echo $c->getThumbnail(); ?>" alt="" width="236px" /></a>
 				                <h2><?php echo $c->getName(); ?></h2>
 						
-								<?php echo '<p>'. date('M jS \a\t g:ia', strtotime($enddate)) .'</p>';?>
+								<p><?php echo timeBetweenNowAndDeadline($enddate); ?></p>
 				            </article>
 						<?php } else{ ?>
              
              <article class="homeSale size2 fl masonry">
                 <a href="<?php echo  $c->getURL() ?>" title="View sale details for: <?php echo $c->getName(); ?>" class="product-image"><img src="/media/catalog/category/<?php echo $c->getThumbnail(); ?>" alt="" width="236px" /></a>
                 <h2><?php echo $c->getName(); ?></h2>
-					<p><?php echo timeBetweenNowAndDeadline($enddate); ?></p>
+				<p><?php echo timeBetweenNowAndDeadline($enddate); ?></p>
             </article>
 				<?php } $i++; }}}}}  }} ?>			
 
