--- a/app/locale/en_US/template/email/rewardsref/referral_subscribe.html
+++ b/app/locale/en_US/template/email/rewardsref/referral_subscribe.html
@@ -1,41 +1,26 @@
+<!--@subject {{var parent.name}} invites you to {{var store_name}} @-->
 <!--@style 
 body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; }
  @-->
-
-<html>
-<head>
-<title>{{var parent.name}} invites you to Rooja</title>
-
-
-<meta httpequiv="ContentType" content="text/html; charset=iso88591">
-</head>
-<table id="Table_01" width="650" height="638" border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;margin: 0 auto;">
-	<tr style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
-		<td colspan="2" style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
-			<a href="{{store url=" "}}"><img src="{{skin url="images/email/new-account_02.jpg" _area='frontend'}}" width="650" height="180" alt="" style="display: block;padding: 10px 10px 10px 0;"></a></td>
-	</tr>
-	<tr style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
-		<td style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
-			<img src="{{skin url="images/email/invitation_01.jpg" _area='frontend'}}" width="336" height="375" alt="" style="display: block;padding: 10px 10px 10px 0;"></td>
-		<td id="content" style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;vertical-align: top;">
-
-			<p class="password" style="background: #e2e2e2;font-size: 12px;line-height: 16px;padding: 10px 17px;margin: 10px 0px;width: 270px;">
-				<strong style="color: #111;font-size: 12px;text-transform: uppercase;display: block;padding: 0 0 10px 0;">Emerson has invited you</strong>
-				I thought you'd really enjoy this! This is where I got your last birthday present. Their deals are amazing!
-			</p>
-
-
-		<img src="{{skin url="images/email/percent.jpg" _area='frontend'}}" alt="Account Features" style="display: block;padding: 10px 10px 10px 0;">
-Get access to internationally renowned designers and brands at prices you won't believe. Accept your invitation and join us today!		
-
-<a href="{{store url=" "}}/customer/account/create"><img src="{{skin url="images/email/accept.jpg" _area='frontend'}}" alt="accept invite" style="display: block;padding: 10px 10px 10px 0;">
-	</a></td></tr>
-	<tr style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;">
-		<td colspan="2" id="footer" style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 11px;color: #111;line-height: 18px;">
-			<img src="{{skin url="images/email/break.jpg" _area='frontend'}}" alt="" style="display: block;padding: 10px 10px 10px 0;">
-			If you have any questions about your account or any other matter, please feel free to contact us at support@rooja.com or by phone at (888) 298-9238.
-		</td>
-	</tr>
-</table>
-
-</html>
+<div style="font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;">
+    <table cellspacing="0" cellpadding="0" border="0" width="98%" style="margin-top:10px; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; margin-bottom:10px;">
+        <tr>
+            <td align="center" valign="top">
+                <table cellspacing="0" cellpadding="0" border="0" width="650">
+                    <tr>
+                        <td valign="top"><a href="{{store url=""}}"><img src="{{skin url="images/logo_email.gif" _area='frontend'}}" alt=""  style="margin-bottom:10px;" border="0"/></a></td>
+                    </tr>
+                </table>
+                <table cellspacing="0" cellpadding="0" border="0" width="650">
+                    <tr>
+                        <td valign="top">
+                            <p>Dear {{var referral.referral_name}},</p>
+                            <p>{{var parent.name}} ({{var parent.email}}) would like to invite you to join <a href="{{store url=""}}">{{var store_name}}</a></p>
+                            <p>{{var parent.name}}'s Message: <BR /> {{var msg}}</p>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+</div>
