--- a/app/locale/en_US/template/email/rewardsref/referral_subscribe.html
+++ b/app/locale/en_US/template/email/rewardsref/referral_subscribe.html
@@ -15,8 +15,8 @@ body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;
 		<td id="content" style="border-collapse: collapse;font-family: Helvetica, Arial, sans-serif;font-size: 13px;color: #111;line-height: 18px;vertical-align: top;">
 
 			<p class="password" style="background: #e2e2e2;font-size: 12px;line-height: 16px;padding: 10px 17px;margin: 10px 0px;width: 270px;">
-				<strong style="color: #111;font-size: 12px;text-transform: uppercase;display: block;padding: 0 0 10px 0;">Emerson has invited you</strong>
-				I thought you'd really enjoy this! This is where I got your last birthday present. Their deals are amazing!
+				<strong style="color: #111;font-size: 12px;text-transform: uppercase;display: block;padding: 0 0 10px 0;">{{var parent.name}} has invited you</strong>
+			{{var msg}}
 			</p>
 
 
