--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -77,8 +77,8 @@
 <?php endif;?>
 <script type="text/javascript">
 	jQuery(document).ready(function(){
-		jQuery("#myBag").click(function() {
-			jQuery("#sidebarCart").slideToggle();
+		jQuery("#myBag, #addToBagBtn").click(function() {
+			jQuery("#sidebarCart").slideDown();
 			return false;
 			});
 		jQuery("#closerBtn").click(function() {
