--- a/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/cart/sidebar.phtml
@@ -78,7 +78,7 @@
 <script type="text/javascript">
 	jQuery(document).ready(function(){
 		jQuery("#myBag").click(function() {
-			jQuery("#sidebarCart").slideDown();
+			jQuery("#sidebarCart").slideToggle();
 			return false;
 			});
 		jQuery("#closerBtn").click(function() {
