--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -46,13 +46,13 @@
 <section id="content" class="body">
 	<div id="loginCont">
 	<h2 id="members" class="tr">Members Sign In</h2>
-	<a href="<?php echo $this->getForgotPasswordUrl() ?>" id="forgetPass">Forget your password?</a>
+	<a href="<?php echo $this->getForgotPasswordUrl() ?>" id="forgetPass">Forgot your password?</a>
 
 	<form action="<?php echo $this->getPostActionUrl() ?>" method="post" id="login-form">
         <input type="text" name="login[username]" value="<?php echo $this->htmlEscape($this->getUsername()) ?>" id="email" class="input-text required-entry validate-email" title="<?php echo $this->__('Email Address') ?>" />
 		<input type="password" name="login[password]" class="input-text required-entry validate-password" id="pass" title="<?php echo $this->__('Password') ?>" />
 				<button id="fBConnect" rel="facebook-connect" type="button" title="<?php echo $this->__('Connect with Facebook') ?>" class="button"></button>
-
+				<p>Having trouble? Email us at <a href="mailto:support@rooja.in">support@rooja.in</a></p>
 		<input type="submit" id="loginBtn" name="loginBtn" class="tr">
 	</form>
 	</div>
