--- a/app/design/frontend/default/rooja/template/catalog/product/list.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/list.phtml
@@ -67,8 +67,8 @@ echo $likes = $xml->link_stat->like_count;
 				</span>
 				<p class="price"><span class="livePrice">
 				<?php if (!$fbprice == null) { ?>
-					<?php echo '$' . number_format($fbprice, 2); } else { ?>
-					<?php echo '$' . number_format($_product->getSpecialprice(), 2); } ?>
+					<?php echo 'R' . number_format($fbprice, 2); } else { ?>
+					<?php echo 'R' . number_format($_product->getSpecialprice(), 2); } ?>
 				
 				</span><span> 
 				<?php if(!$_product->isSaleable()){ echo 'Sold Out'; } else { echo '$' . number_format($_product->getPrice(), 2); } ?></span></p>
