--- a/app/design/frontend/default/rooja/template/aw_rma/customer/dashboard.phtml
+++ b/app/design/frontend/default/rooja/template/aw_rma/customer/dashboard.phtml
@@ -62,6 +62,6 @@
     <?php echo $this->getChildHtml('pager'); ?>
     <script type="text/javascript">decorateTable('my-rmas-table')</script>
     <?php else : ?>
-    <p><?php echo $this->__('You have no RMA requests'); ?></p>
+    <p><?php echo $this->__('You have no return requests'); ?></p>
     <?php endif; ?>
 </div>
