--- a/app/design/frontend/base/default/layout/newsletter.xml
+++ b/app/design/frontend/base/default/layout/newsletter.xml
@@ -48,7 +48,7 @@ Customer account pages, rendered for all tabs in dashboard
     <customer_account>
         <!-- Mage_Newsletter -->
         <reference name="customer_account_navigation">
-            <action method="addLink" translate="label" module="newsletter"><name>newsletter</name><path>newsletter/manage/</path><label>Newsletter Subscriptions</label></action>
+            <action method="addLink" translate="label" module="newsletter"><name>newsletter</name><path>newsletter/manage/</path><label>My Email Preferences</label></action>
         </reference>
         <remove name="left.newsletter"/>
     </customer_account>
