--- a/app/design/frontend/default/rooja/template/aw_rma/customer/new.phtml
+++ b/app/design/frontend/default/rooja/template/aw_rma/customer/new.phtml
@@ -127,6 +127,6 @@
     //]]>
     </script>
     <?php else : ?>
-    <p><?php echo $this->__('You have no orders to request RMA'); ?></p>
+    <p><?php echo $this->__('You have no orders to request Return'); ?></p>
     <?php endif; ?>
 </div>
