--- a/app/design/frontend/base/default/template/customer/form/newsletter.phtml
+++ b/app/design/frontend/base/default/template/customer/form/newsletter.phtml
@@ -25,7 +25,7 @@
  */
 ?>
 
-    <h1><?php echo $this->__('Newsletter Subscription') ?></h1>
+    <h1>Subscribe to Rooja.com emails</h1>
 
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
 <?php echo $this->getChildHtml('form_before')?>
@@ -38,7 +38,7 @@
     </div>
  
        
-        <button type="submit" title="<?php echo $this->__('Save') ?>" class="button"><span><span><?php echo $this->__('Save') ?></span></span></button>
+        <button type="submit" title="<?php echo $this->__('Save Changes') ?>" class="button"><span><span><?php echo $this->__('Save') ?></span></span></button>
   
 </form>
 <script type="text/javascript">
