--- a/app/design/frontend/base/default/template/customer/form/newsletter.phtml
+++ b/app/design/frontend/base/default/template/customer/form/newsletter.phtml
@@ -38,7 +38,7 @@
     </div>
  
        
-        <button type="submit" title="<?php echo $this->__('Save Changes') ?>" class="button"><span><span><?php echo $this->__('Save') ?></span></span></button>
+        <button type="submit" title="<?php echo $this->__('Save Changes') ?>" class="button"><span><span><?php echo $this->__('Save Changes') ?></span></span></button>
   
 </form>
 <script type="text/javascript">
